@@ -8,6 +8,7 @@ Version 1.7.11+svn:
  * User interface:
    * Switched back to the tiled background for gui2
    * Improved to looks in tiny-gui
+   * Add a new transient error message
  * Miscellaneous and bugfixes:
    * Fix scrolling during animation (bug 13106)
    * Fix drakes tipping their wings in the water when flying
